Cleanning unused files.

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,35 +1,36 @@
-upstream ms-auth {
-  server 10.0.1.136:8081;
+upstream ms-seller {
+  server 172.19.0.1:8000;
 }
 
 upstream ms-catalog {
-  server 10.0.1.136:8082;
+  server 172.19.0.1:8100;
 }
 
-upstream ms-customers {
-  server 10.0.1.136:8083;
+upstream ms-billing {
+  server 172.19.0.1:8200;
 }
 
 server {
 
   listen 80 default;
-  server_name api.example.com;
+  server_name api.nuvemgo.local;
+  client_max_body_size 150M;
 
   location / {
     default_type application/json;
     return 440 '{"status":"success","result":"NGIX Api-Gatway working."}';
   }
 
-  location /auth/ {
-    proxy_pass http://ms-auth/;
+  location /seller/ {
+    proxy_pass http://ms-seller/;
   }
 
   location /catalog/ {
     proxy_pass http://ms-catalog/;
   }
 
-  location /customer/ {
-    proxy_pass http://ms-customers/;
+  location /billing/ {
+    proxy_pass http://ms-billing/;
   }
 
 }
