--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
           - ./docker/nginx:/etc/nginx/conf.d
       ports:
        - "80:80"
-      networks:
-            gateway_net:
-                ipv4_address: 172.28.1.2 
+         #      networks:
+         #   gateway_net:
+         #       ipv4_address: 172.28.1.2 
 
 networks:
     gateway_net:
